# arkor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linter.yml  test.yml
src/: bytecode.rs  interpreter.rs  interpreter_test.rs  main.rs
