[package]
name = "arkor"
authors = ["Sasha Syrotenko", "Irina Artemeva"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
static_assertions = "1.1.0"
thiserror = "1.0"
log = { version = "0.4.20", features = [] }
env_logger = "0.10.0"

# Note: to enable desired log level, run compiler/tests with `RUST_LOG=_log_level_`